clusters/desktop/steam/immich.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steam
  namespace: default
  labels:
    app: steam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: steam
  template:
    metadata:
      labels:
        app: steam
    spec:
      volumes:
        - name: steam-storage
          persistentVolumeClaim:
            claimName: steam-pvc
      containers:
        - name: immich
          image: josh5/steam-headless:latest
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: steam-storage
              mountPath: /opt/container-services/steam-headless
              subPath: steam-headless
            - name: steam-storage
              mountPath: /mnt/games
              subPath: games
---
apiVersion: v1
kind: Service
metadata:
  name: steam
  namespace: default
spec:
  selector:
    app: steam
  ports:
    - name: steam-http
      protocol: TCP
      port: 80
      targetPort: 8083
